--- a/index.html
+++ b/index.html
@@ -10,19 +10,22 @@
 </head>
 <body>
     <main class="d-flex justify-content-center align-items-center">
-        <div id="playground" class="d-none">
+            <div id="score" class="text-white ps-2 d-none">
+                <span>
+                    Il tuo punteggio &egrave; : 0
+                </span>
+            </div> 
+            <div id="playground" class="d-none">
             
-        </div>
-
-        <div id="game-start" class="d-flex gap-2">
-            <select class="form-select" aria-label="Default select example">
-                <option selected value="facile">Difficolt&agrave; 1</option>
-                <option value="medio">Difficolt&agrave; 2</option>
-                <option value="difficile">Difficolt&agrave; 3</option>
-              </select>
-            <button class="btn text-uppercase">Gioca</button>
-        </div>
-        
+            </div>
+            <div id="game-start" class="d-flex gap-2">
+                <select class="form-select" aria-label="Default select example">
+                    <option selected value="facile">Difficolt&agrave; 1</option>
+                    <option value="medio">Difficolt&agrave; 2</option>
+                    <option value="difficile">Difficolt&agrave; 3</option>
+                  </select>
+                <button class="btn text-uppercase">Gioca</button>
+            </div>    
     </main>
     <script src="js/utility.js"></script>
     <script src="js/script.js"></script>
