updating game over

--- a/index.html
+++ b/index.html
@@ -10,10 +10,8 @@
 </head>
 <body>
     <main class="d-flex justify-content-center align-items-center">
-            <div id="score" class="text-white ps-2 d-none">
-                <span>
-                    Il tuo punteggio &egrave; : 0
-                </span>
+            <div id="score" class="text-white ps-2 d-none text-uppercase">
+                Il tuo punteggio &egrave; : 0
             </div> 
             <div id="playground" class="d-none">
             
