--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <main class="d-flex justify-content-center align-items-center">
-            <div id="score" class="text-white ps-2 d-none text-uppercase">
+            <div id="score" class="ms-2 p-2 d-none text-uppercase text-center">
                 Il tuo punteggio &egrave; : 0
             </div> 
             <div id="playground" class="d-none">
